--- a/portfolio/templates/portfolio/topics.html
+++ b/portfolio/templates/portfolio/topics.html
@@ -1,16 +1,7 @@
 {% extends "portfolio/base.html" %}
 
 {% block content %}
+<p>Onde o mundo pode ver sua capacidade.</p>
+<p>LOL2ssss</p>
 
-<p> Topics </p>
-
-<ul>
-  {% for topic in topics %}
-  <li>{{topic}}</li>
-  {% empty %}
-  <li>No topics</li>
-  {% endfor %}
-
-</ul>
-LOOOOOOOOOOOL
-{% endblock content%}
+{% endblock content %}
