--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,11 +2,23 @@
 
 {% block content %}
 
+<!--
 <h2>Login</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+-->
+  {% if form.errors %}
+  <p>Seu usuario e senha</p>
+  {% endif %}
+
+  <form method="post" action="{% url 'users:login' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Login</button>
+    <input type="hidden" name="next" value="{% url 'portfolio:index' %}">
+  </form>
 
 {% endblock content %}
