--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -17,7 +17,7 @@
   <form method="post" action="{% url 'users:login' %}">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <button name="submit">Login</button>
     <input type="hidden" name="next" value="{% url 'portfolio:index' %}">
   </form>
 
