--- a/assets/simple-sidebar.css
+++ b/assets/simple-sidebar.css
@@ -32,7 +32,7 @@ body {
   height: 100%;
   margin-left: -250px;
   overflow-y: auto;
-  background: #000;
+  background: #273C47;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -69,6 +69,7 @@ body {
 .sidebar-nav li {
   text-indent: 20px;
   line-height: 40px;
+  color: #FF993A
 }
 
 .sidebar-nav li a {
