--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg text-white " style="background-color: #00838F;">
+    <nav class="navbar navbar-expand-lg text-white " style="background-color: #273C47;">
       <a class="navbar-brand" href="#">
         <img src="{% static 'logo.svg' %}" width="50" height="50" alt="">
       </a>
@@ -36,7 +36,7 @@
             <li class="nav-item"> </li>
               <li class="nav-item">
                 <form class="" action="{% url 'users:logout' %}">
-                Ola, {{user.username}}!&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="submit" name="" class="btn btn-danger my-2 my-sm-0" value="Log Out">
+                Ola, <a href="{% url 'users:profile_page' %}">{{user.username}}</a> !&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="submit" name="" class="btn btn-danger my-2 my-sm-0" value="Log Out">
                 </form>
                </li>
             {% else %}
@@ -47,7 +47,7 @@
       </div>
 </nav>
 
-    
+
     {% block content %} {% endblock content %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
