--- a/users/templates/users/profile_page.html
+++ b/users/templates/users/profile_page.html
@@ -5,16 +5,16 @@
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a href="#">MenuBar</a>
+        Nome
       </li>
       <li class="sidebar-brand">
-        <a href="#">Button</a>
+        Função
       </li>
       <li class="sidebar-brand">
-        <a href="#">MenuBar</a>
+        Telefone
       </li>
       <li class="sidebar-brand">
-        <a href="#">MenuBar</a>
+        Endereço
       </li>
     </ul>
   </div>
